Multi-L2D-MoG
Lmod has detected the following error: These module(s) or extension(s) exist
but cannot be loaded as requested: "cuDNN"
   Try: "module spider cuDNN" to see how to load the module(s).



  File "main.py", line 17
    %matplotlib inline
    ^
SyntaxError: invalid syntax
srun: error: r28n4: task 0: Exited with exit code 1
